Updating placeholders in capture related texts.

--- a/src/main/resources/langs/lang_FR.yml
+++ b/src/main/resources/langs/lang_FR.yml
@@ -141,23 +141,23 @@ capture:
   # Texts sent when a capture starts.
   start:
     self:
-      message: "&6>> &eVous &acapturez la base de l'équipe %team_name%&e."
+      message: "&6>> &eVous &acapturez la base de l'équipe %captured_team_name%&e."
     captured-team:
-      message: "&6>> &eL'équipe %team_name% &ccapture &evotre base !"
+      message: "&6>> &eL'équipe %catcher_team_name% &ccapture &evotre base !"
   # Texts sent when a capture stops.
   stop:
     self:
-      message: "&6>> &eVous &cne capturez plus &ela base de l'équipe %team_name%&e."
+      message: "&6>> &eVous &cne capturez plus &ela base de l'équipe %captured_team_name%&e."
     captured-team:
-      message: "&6>> &eL'équipe %team_name% &ane capture plus &evotre base !"
+      message: "&6>> &eL'équipe %catcher_team_name% &ane capture plus &evotre base !"
   # Texts sent when a base is captured.
   base-captured:
     self:
-      message: "&6>> &eVous avez &acapturé &ela base de l'équipe %team_name%&e."
+      message: "&6>> &eVous avez &acapturé &ela base de l'équipe %captured_team_name%&e."
     other:
       message: "&6>> &eL'équipe %catcher_team_name% &ea &acapturé &ela base de l'équipe %captured_team_name%&e."
     captured-team:
-      message: "&6>> &eL'équipe %team_name% &ea &ccapturé &evotre base."
+      message: "&6>> &eL'équipe %catcher_team_name% &ea &ccapturé &evotre base."
       title: "&cBase capturée"
       subtitle: "&7Vous serez éliminé si vous mourrez"
 
