--- a/src/main/resources/langs/lang_FR.yml
+++ b/src/main/resources/langs/lang_FR.yml
@@ -305,6 +305,9 @@ game-scoreboard:
     - "&6• &eKills&6: %kills%"
     - "&6• &eMorts&6: %deaths%"
     - " "
+    - "&6• &eNether&6: %nether_state%"
+    - "&6• &eEnd&6: %end_state%"
+    - " "
     - "&6• &eTemps de jeu&6: %short_hours%%short_minutes%%short_seconds%"
     - " "
     - "&6&m--------------------"
@@ -319,6 +322,18 @@ game-scoreboard:
     # Texte affiché lorsque les assaults sont activés.
     enabled: "&a✔"
     # Texte affiché lorsque les assaults sont désactivés.
+    disabled: "&c✘"
+  # Textes correspondant au statut du Nether. Ils remplacent le placeholder %nether_state%.
+  nether-state:
+    # Texte affiché lorsque le Nether est activé.
+    enabled: "&a✔"
+    # Texte affiché lorsque le Nether est désactivé.
+    disabled: "&c✘"
+  # Textes correspondant au statut de l'End. Ils remplacent le placeholder %end_state%.
+  end-state:
+    # Texte affiché lorsque l'End est activé.
+    enabled: "&a✔"
+    # Texte affiché lorsque l'End est désactivé.
     disabled: "&c✘"
   time-format: "%short_hour%%short_minute%%short_second%"
 
@@ -338,6 +353,9 @@ spectator-scoreboard:
     - "&6• &ePvP&6: %pvp_state%"
     - "&6• &eAssauts&6: %assaults_state%"
     - " "
+    - "&6• &eNether&6: %nether_state%"
+    - "&6• &eEnd&6: %end_state%"
+    - " "
     - "&6• &eTemps de jeu&6: %short_hours%%short_minutes%%short_seconds%"
     - " "
     - "&6&m--------------------"
@@ -352,6 +370,18 @@ spectator-scoreboard:
     # Texte affiché lorsque les assaults sont activés.
     enabled: "&a✔"
     # Texte affiché lorsque les assaults sont désactivés.
+    disabled: "&c✘"
+  # Textes correspondant au statut du Nether. Ils remplacent le placeholder %nether_state%.
+  nether-state:
+    # Texte affiché lorsque le Nether est activé.
+    enabled: "&a✔"
+    # Texte affiché lorsque le Nether est désactivé.
+    disabled: "&c✘"
+  # Textes correspondant au statut de l'End. Ils remplacent le placeholder %end_state%.
+  end-state:
+    # Texte affiché lorsque l'End est activé.
+    enabled: "&a✔"
+    # Texte affiché lorsque l'End est désactivé.
     disabled: "&c✘"
   time-format: "%short_hour%%short_minute%%short_second%"
 
